# Day17-Nhom2Z4

./: .gitignore  pyproject.toml  shell.nix
starter_code/: process_unstructured.py  schema.py
