
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "poject-name"
version = "0.1.0"
description = "Nothing yet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    # "llama-index-core>=0.14.20",
    # "llama-index-readers-file>=0.6.0",
    # "llama-index-embeddings-openai>=0.6.0",
    # "llama-index-llms-openai>=0.7.5",
    "pydantic>=2.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest",

    # pip install . install the core application
    # pip install ".[dev]" installs the app PLUS all these testing and linting tools
]


[tool.pytest.ini_options]
# Tell pytest to add the 'src' directory to the PYTHONPATH
pythonpath = ["starter_code"]

[tool.basedpyright]
# Tell basedpyright to add 'src' to its list of
# paths to search for imports. This directly fixes the
# "reportMissingImports" error.
# extraPaths = ["src"]
# include = ["src"]
exclude = ["__pycache__", ".direnv", ".mypy_cache", ".git", ".venv"]

[tool.setuptools]
packages = ["starter_code", "tests"]
